<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:alpha=".15"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/payze_new_logo_nb"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_card_info"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/number"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_wrapBehaviorInParent="vertical_only">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/holderLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/holder"
        app:layout_constraintTop_toBottomOf="@id/numberLayout"
        app:layout_wrapBehaviorInParent="vertical_only">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvvLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cvv"
        app:layout_constraintEnd_toStartOf="@id/monthLayout"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/holderLayout"
        app:layout_wrapBehaviorInParent="vertical_only">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardCvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/monthLayout"
        app:layout_constraintEnd_toStartOf="@id/yearLayout"
        app:layout_constraintStart_toEndOf="@id/monthLayout"
        app:layout_constraintTop_toTopOf="@id/monthLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/monthLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:hint="@string/month"
        app:layout_constraintEnd_toStartOf="@id/yearLayout"
        app:layout_constraintStart_toEndOf="@id/cvvLayout"
        app:layout_constraintTop_toTopOf="@id/cvvLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cardExpMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yearLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/monthLayout"
        app:layout_constraintTop_toTopOf="@id/cvvLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cardExpYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transactionLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/transaction_id"
        app:layout_constraintTop_toBottomOf="@id/cvvLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transactionIdInput"
            android:text="@string/default_transaction_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/makePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_payment"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/transactionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>